Add support for loading extensions packaged as spring-boot uber jars.
To make it easier for an extension to include its own transitive dependencies,
change butterfly so that it can load extension jars that contain nested jars
created by spring-boot maven plugin.

Fixes #364